--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/CustomTheme"
         android:debuggable="true">
         <activity
-            android:name="com.example.uhf.activity.UHFMainActivity"
+            android:name="com.example.uhf.activity.MainActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
 
     </application>
 
